--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.19.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -22,6 +23,7 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "prisma": "^6.19.1"
   }
 }
